## Process this file with automake to produce Makefile.in
# Makefile.am for tinycdb included in multiskkserv

if BUILD_TINYCDB
noinst_LTLIBRARIES = libtinycdb.la
endif

libtinycdb_la_SOURCES = \
	cdb_init.c cdb_find.c cdb_findnext.c cdb_seq.c cdb_seek.c \
	cdb_unpack.c \
	cdb_make_add.c cdb_make_put.c cdb_make.c cdb_hash.c \
	cdb.h cdb_int.h
